@@ -174,6 +174,7 @@ v1.2.0  --> 1.2.x :
 		- Fixed bug #532: halfway and newleader had wrong leader
 		- Fixed bug #530: output problems for races with a lot of users
 		- Added comments to ngBot.conf.default regarding max_log_change
+		- Updated the audio-genre script to use the same genres as in the zipscript
 
 v1.1.0a --> 1.2.0 :
 		- added option to make accept_script run prior to complete_script.
